# railway-management-system

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Implement DebitCard Model.py  LICENSE  README.md  pyproject.toml
app/: context.py  main.py  menu_controller.py  wallet_model.py
app/menus/: admin_login_menu.py  base.py  customer_auth_menu.py  customer_login_menu.py  customer_operations.py  customer_registration_menu.py  main_menu.py  manage-staff-menu.py  manage_staff_menu.py  railway_menu.py  staff_login_menu.py  staff_operations.py  ticket.py  ticket_purchase_menu.py  train_menu.py  user-Authentication-menu.py  user-profile-update-menu.py  user-profile-update.py  user_registration_menu.py  wallet_menu.py
app/models/: base.py  debit_card.py  railway.py  ticket.py  train.py  train_model.py  transaction.py  user.py  wallet.py
app/repositories/: Implement-Railway-Repository.py  base.py  railway.py  ticket.py  train.py  transaction.py  user.py
app/services/: admin.py  auth.py  auth_service.py  base.py  customer.py  staff.py  ticket.py  wallet.py
app/utils/: file_utils.py  sha256.py  uuid.py  validators.py
docs/: menu-system.md
